--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,127 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    background-image: url("../Assets/bg.svg");
+    overflow-x: hidden;
+}
+
+html::-webkit-scrollbar-thumb {
+    height: 8rem;
+}
+
+.container {
+    width: 100vw;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
+hr {
+    margin: 3% 0 1%;
+    border: 1px solid black;
+}
+
+.things-to-do {
+    display: flex;
+    flex-direction: column;
+    padding: 2% 0;
+}
+
+.heading {
+    font-size: 3rem;
+    padding: 0% 3% 1.5%;
+}
+
+.cards-container {
+    padding: 0 4%;
+    display: flex;
+    gap: 2.5%;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.cards {
+    background-color: #035e88;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+    border-radius: 5px;
+    overflow: hidden;
+
+}
+
+@media screen and (max-width: 480px) {
+    .cards {
+        width: 100%;
+    }
+}
+
+.image {
+    overflow: hidden;
+}
+
+.image > img {
+    width: 100%;
+    cursor: pointer;
+    object-fit: cover;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;transition: transform 1s ease-in-out;
+}
+
+.image > img:hover {
+    transform: scale(1.1);
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 6%;
+    line-height: 2.5rem;
+}
+
+.text > h4 {
+    font-size: 1.2rem;
+    color: rgba(255, 255, 255, 0.9);
+}
+
+.text > a {
+    text-decoration: none;
+    font-size: 2.4rem;
+    color: white;
+}
+
+.text > a:hover {
+    text-decoration: underline;
+}
+
+.text > p {
+    font-size: 2rem;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.btn {
+    margin: auto 6.6% 7%;
+}
+
+.btn > button {
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    width: fit-content;
+    padding: 4% 6%;
+    cursor: pointer;
+}
+
+.btn > button > a {
+    font-size: 1.6rem;
+    text-decoration: none;
+    color: white;
+}
