--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,83 @@ hr {
     text-decoration: none;
     color: white;
 }
+/* Jeet CSS for Footer */
+.main-container {
+    background: #035e88;
+    width: 100%;
+    height: 50vh;
+    /* padding-left: 15%; */
+}
+.main-footer {
+   padding-left: 10%;
+   padding-right: 10%;
+    display: flex;
+    
+
+}
+.nav {
+    padding-top: 5rem;
+
+}
+.logo {
+    /* padding-top: 30px; */
+    padding-left: 30px;
+    cursor: pointer;
+
+}
+
+.icons {
+    display: flex;
+    /* flex-wrap: wrap; */
+    text-align: left;
+    list-style: none;
+    padding-left: 40px;
+    padding-top: 10px;
+    gap: 1.5rem;
+    align-items: bottom;
+    
+    
+
+ .facebook, .instagram, .trip, .twitter, .youtube {
+   color: #fff;
+  font-size: 1.8rem;
+ }
+}
+
+.footer-list {
+    width: 80%;
+    display: flex;
+    gap: 0.5rem;
+    /* align-items: bottom; */
+    padding-left: 20px;
+    padding-right: 10px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+.suiblist, .sublist-item {
+    list-style: none;
+    padding: top;
+    margin: 0;
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-decoration: none;
+    font-size: 1rem;
+    
+    
+}
+div h4 {
+    color: #fff;
+    padding-bottom: 1rem;
+    padding-top: 5rem;
+}
+.sublist-item, a {
+    color: #fff;
+    text-decoration: none;
+    padding-bottom: 0.8rem;
+    padding-bottom: 0.8rem;
+    font-size: 16px;
+    line-height: 32px;
+}
