--- a/styles.css
+++ b/styles.css
@@ -58,13 +58,13 @@ html::-webkit-scrollbar-thumb {
 .scroll-btn {
     display: flex;
     justify-content: space-between;
-    gap: 5rem;
+    gap: 4rem;
     display: none;
 }
 
 @media screen and (min-width:991px) and (max-width:1099px) {
     .scroll-btn {
-        display: block;
+        display: flex;
     }
 }
 
@@ -121,6 +121,7 @@ html::-webkit-scrollbar-thumb {
 
 .cards-container-1 {
     padding: 0 4%;
+    margin-bottom: 5rem;
     display: flex;
     gap: 2.5%;
     width: 100%;
@@ -250,13 +251,14 @@ html::-webkit-scrollbar-thumb {
     bottom: 45%;
     background-color: #035e88;
     border-radius: 5px;
-    border-top-left-radius: 8rem;
+    border-top-left-radius: 5rem;
 }
 
 @media screen and (min-width:1198px) {
     .what-happening::before {
         left: 4%;
         right: 4%;
+        border-top-left-radius: 8rem;
     }
 }
 
@@ -383,6 +385,293 @@ html::-webkit-scrollbar-thumb {
 .btn-2 i {
     color: #035e88;
     font-size: 1.4rem;
+}
+
+.in-dubai {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.cards-container-2 {
+    display: flex;
+    margin: 2% 0 0;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 6% 1%;
+    width: 100%;
+    overflow-x: auto;
+    scrollbar-color: transparent transparent;
+}
+
+@media screen and (min-width:766px) {
+    .cards-container-2 {
+        flex-direction: row;
+        gap: 5rem;
+        padding: 0 10%;
+    }
+}
+
+.cards-2 {
+    width: 100%;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+}
+
+@media screen and (min-width:766px) {
+    .cards-2 {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width:767px) {
+    .cards-2 {
+        width: 34%;
+    }
+}
+
+.image-3 {
+    width: 100%;
+    position: relative;
+}
+
+.image-3 img {
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+    cursor: pointer;
+    overflow: hidden;
+    transition: transform 1s ease-in-out;
+}
+
+.image-3 img:hover {
+    transform: scale(1.05);
+}
+
+.cards-2 .image-3 button {
+    position: absolute;
+    bottom: -3rem;
+    right: 2rem;
+}
+
+.image-3 button {
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 0px 1px 1px #0000003d;
+    position: relative;
+    bottom: 11rem;
+    right: 19%;
+    background-color: #fff;
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+    z-index: 1;
+    color: #035e88;
+}
+
+@media screen and (min-width:767px) {
+    .image-3 button {
+        right: 10%;
+    }
+}
+
+.image-3 button:hover {
+    color: #fff;
+}
+
+.image-3 button::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #035e88;
+    transition: top 0.3s ease-in-out;
+}
+
+.image-3 button:hover::before {
+    top: 0;
+}
+
+.cards-2 a {
+    color: black;
+    text-decoration: none;
+    padding: 4% 20% 4% 4%;
+    font-size: 2rem;
+    width: fit-content;
+}
+
+.cards-2 a:hover {
+    text-decoration: underline;
+}
+
+.cards-2 p {
+    color: #00000095;
+    font-size: 1.6rem;
+    padding: 0 4%;
+}
+
+.more {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 10% 2%;
+    margin-top: -2%;
+}
+
+.more a {
+    font-size: 1.6rem;
+    text-decoration: none;
+    padding: 0.05% 0 0 0;
+    color: #035e88;
+}
+
+.more a:hover {
+    text-decoration: underline;
+}
+
+.more i {
+    padding-top: 0.3%;
+    font-size: 1.4rem;
+    align-self: center;
+    color: #035e88;
+}
+
+.watch-videos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 4% 7%;
+}
+
+.watch-videos h1 {
+    font-size: 3rem;
+}
+
+.cards-container-3 {
+    display: flex;
+    gap: 2.5%;
+    padding: 0 1%;
+    gap: 3.5%;
+    overflow-x: scroll;
+    scrollbar-color: transparent transparent;
+}
+
+.cards-3 {
+    width: 45%;
+    height: 40rem;
+    flex: 0 0 auto;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    position: relative;
+}
+
+@media screen and (min-width:1000px) {
+    .cards-3 {
+        width: 17%;
+    }
+}
+
+.cards-3 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 1s ease-in-out;
+}
+
+.cards-3 img:hover {
+    transform: scale(1.1);
+}
+
+.context-1 {
+    position: absolute;
+    bottom: 4%;
+    left: 2%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 2%;
+}
+
+.context-1 a {
+    text-decoration: none;
+    font-size: 1.6rem;
+    padding-top: 4%;
+}
+
+.context-1 a:hover {
+    text-decoration: underline;
+}
+
+.context-1 i {
+    background-color: #fff;
+    padding: 6%;
+    margin-right: 3%;
+    border-radius: 50%;
+    color: #035e88;
+    font-size: 1.2rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (min-width:768px) {
+    .context-1 a {
+        font-size: 2.4rem;
+    }
+    
+    .context-1 i {
+        font-size: 1.8rem;
+    }
+}
+
+.btn-3 {
+    width: 100%;
+    padding: 0 1%;
+    background-color: #035e88;
+    border-radius: 5px;
+    text-align: center;
+}
+
+@media screen and (min-width:1000px) {
+    .btn-3 {
+        background-color: transparent;
+        text-align: left;
+    }
+
+    .btn-3 a {
+        color: #035e88;
+    }
+}
+
+.btn-3 a {
+    text-decoration: none;
+    font-size: 1.8rem;
+    margin-right: 0.8rem;
+}
+
+.btn-3 a:hover {
+    text-decoration: underline;
+}
+
+.btn-3 i {
+    color: #035e88;
+    font-size: 1.6rem;
 }
 
 /* Jeet CSS for Footer */
