--- a/styles.css
+++ b/styles.css
@@ -899,6 +899,7 @@ html::-webkit-scrollbar-thumb {
     flex-direction: column;
     gap: 1.5rem;
     width: 100%;
+    overflow: hidden;
 }
 
 @media screen and (min-width:480px) {
@@ -913,9 +914,21 @@ html::-webkit-scrollbar-thumb {
     }
 }
 
-.cards-5 img {
+.image-6 {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 8px 8px 0 0;
+}
+
+.image-6 img {
     width: 100%;
     border-radius: 8px 8px 0 0;
+    transition: transform 1s ease-in-out;
+    cursor: pointer;
+}
+
+.image-6 img:hover {
+    transform: scale(1.1);
 }
 
 .text-4 {
@@ -940,7 +953,7 @@ html::-webkit-scrollbar-thumb {
     cursor: pointer;
     z-index: 1;
     transition: color 0.3s ease-in-out;
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 .text-4 button:hover {
