--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,366 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Anand's Work */
+
+.navbar{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100px;
+    align-items: center;
+    
+}
+.upperpart{
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid grey;
+    align-items: center;
+    justify-content: space-around;
+    overflow-y: hidden;
+}
+/* Left part of navbar */
+.leftside ul{
+    display: flex;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: .70rem;
+}
+.leftside ul li{
+    margin: 1vw;
+}
+.leftside a{
+    text-decoration: none;
+    color: black;
+}
+.leftside a:hover{
+    color: blue;
+}
+
+/* Right part of the navbar */
+.rightside ul{
+    display: flex;
+    list-style: none;
+    font-size: .75rem;
+    align-items: center;
+    margin-left: auto;
+}
+.rightside ul li{
+    margin: .65vw;
+    display: flex;
+}
+.rightside a{
+    text-decoration: none;
+    color: black;
+}
+.globe , .login{
+    display: flex;
+    align-items: center;
+    margin-top: .7vh;
+    margin-left: .5vw;
+}
+.rightside button{
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+}
+.rightside img{
+    cursor: pointer;
+}
+.rightside .btn3 {
+    display: none; 
+}
+
+/* Nav-bar upperpart Css ends here......!!!!!!!! */
+
+
+/* left part Css of label div */
+.label_div{
+    display: flex;
+    width: 100%;
+    height: 55px;
+    justify-content: space-around;
+    align-items: center;
+    overflow-y: hidden;
+    /* border: 2px solid black; */
+}
+.label_div_leftpart ul{
+    display: flex;
+    list-style: none;
+    margin-left: 4.9rem;
+    gap: 2vw;
+}
+
+
+.label_div_leftpart ul a{
+    text-decoration: none; 
+    color: black;
+    display: flex;
+    /* align-items: center; */
+}
+.img1{
+    width: 65px;
+}
+.rotate {
+    transition: transform 0s; 
+}
+
+.rotate:hover {
+    transform: rotate(-180deg);
+    /* color: blue; */
+}
+
+/* right part Css of lebel div */
+
+.label_div_rightpart {
+    display: flex; 
+    align-items: center; 
+    justify-content: flex-start;
+    margin-right: 6.5vw;
+}
+
+.label_div_rightpart ul {
+    display: flex;
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+.label_div_rightpart ul li {
+    margin: 0 1vw; 
+}
+
+.label_div_rightpart ul a {
+    display: flex; 
+    align-items: center; 
+}
+.navbar2{
+    display: none;
+}
+
+
+
+/* Main div Css starts here.........!!!!!!!!!!! */
+.main{
+    width: 100%;
+    height: 500px;
+    background-image: url(/assets/asset\ 4.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-bottom-right-radius: 75px;
+    position: relative;
+}
+.firstimage {
+    position:absolute;
+    z-index: 1;
+    left: 7vw;
+    height: 140px;
+    /* top: .vh; */
+}
+.btn2{
+position:absolute;
+z-index: 1;
+top: 8vh; 
+right: 6vw;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+width: 60px;
+height: 60px;
+border-radius: 5px;
+border: none;
+transition: background-color 0.3s ease;
+}
+.btn2:hover {
+    background-color: rgba(0, 123, 255, 0.5); 
+}
+.btn2:hover .button-image {
+    content: url('assets/filled_triangle_left_side.svg'); 
+    opacity: 0; 
+}
+.btn2:hover .button-image {
+    opacity: 0; 
+}
+.btn2:hover .button-image {
+    content: url('assets/emptyarrow.svg'); 
+    opacity: 1;
+}
+.main_part_3{
+    width: 800px;
+    position: absolute;
+    z-index: 0;
+    height: 250px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap:60px;
+    background-color: #9C2677;
+    /* padding: 40px; */
+    border-top-right-radius: 90px ;
+    top: 450px;
+    left: 80px;
+    justify-content: center;
+}
+.main_part_3 p{
+    margin-left: 120px;
+    margin-right: 120px;
+    overflow-y: hidden;
+    /* margin-top: 50px; */
+}
+.main_part_3 h1{
+    margin-left: 120px;
+    margin-right: 120px;
+    overflow-y: hidden;
+    margin-top: 40px;
+}
+.paradiv{
+    display: none;
+}
+
+@media screen and (max-width: 990px) {
+    /* navbar Media quarry ............ */
+    *{
+        overflow: hidden;
+    }
+
+    .navbar{
+        height: 65px;
+    }
+    .navbar > div, 
+    .label_div ul {
+        display: none;
+    }
+    .navbar {
+        border: none; 
+    }
+    /* navbar 2 css     */
+.navbar2{
+    display: flex !important;
+    width: 100%;
+    height: 100px;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    position: relative;
+    /* margin-top: 50px; */
+}
+
+
+#check{
+    display: none;
+}
+.menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    z-index: 800;
+    background-color: #fff;
+    transition: all 0.2s ease-in-out;
+    
+}
+
+.menu li:first-child {
+    margin-top: 50px; /* Adjust this value as needed */
+}
+.menu li a{
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* display: inline-block; */
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    padding: 10px;
+    /* padding-bottom: 20px; */
+    border-bottom: 1px solid lightgray;
+}
+
+.open-menu , .close-menu{
+    position: absolute;
+    cursor: pointer;
+    font-size: 20px;
+    color: black;
+    display: block;
+}
+#check:checked ~ .menu{left:0;}
+.open-menu{
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+}
+.close-menu{
+    top: 15px;
+    left: 20px;
+}
+.img1{
+    width: 65px;
+}
+.navbar2 ul{
+    display: flex;
+}
+.navbar2 ul li{
+    display: flex;
+    margin: 1vw;
+    align-items: center;
+}
+.navbar2 button{
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    color: blue;
+}
+.navbar2_left{
+    margin-left: 20px;
+}
+.navbar2_right{
+    margin-right: 20px;
+}
+.img2{
+    width: 65px;
+    margin-left: 25px;
+}
+
+/* main div media quarry .............. */
+
+
+
+.main_part_1 img{
+    position: relative;
+    left: 0;
+}
+
+/* .main{
+    need the bakcground changed images to use
+    background-image: url('');
+} */
+.main_part_3{
+    display: none;
+}
+.paradiv{
+    display: block;
+    width: 80%;
+    margin: 20px 40px;
+}
+.paradiv h1{
+    font-size: 2.5em;
+    font-weight: 400;
+    padding-bottom: 20px;
+}
+.paradiv p{
+    font-size: 19px ;
+    font-weight: 300;
+}
+}
+
+
 /* Nimesh work */
 .nimesh-container{
     width: 100% ;
